Styles and scripts added the old fashioned way. Look bundle these in a single sass and js file.

--- a/templates/home_page/index.html.twig
+++ b/templates/home_page/index.html.twig
@@ -3,7 +3,8 @@
 {% block stylesheets %}
     {{ parent() }}
     <!-- Sliders -->
-    <link rel="stylesheet" type="text/css" href="{{ asset('build/js/slider-styles.js') }}" />
+    <link rel="stylesheet" type="text/css" href="{{ asset('build/plugins/slider/css/normalize.min.css') }}" media="screen, print" />
+    <link rel="stylesheet" type="text/css" href="{{ asset('build/plugins/slider/css/smartslider.min.css') }}" media="screen, print" />
     <style type="text/css">
         .n2-ss-spinner-simple-white-container {
             position: absolute;
@@ -137,7 +138,12 @@
             WebFont.load(fontData);
         }
     </script>
-    <script type="text/javascript" src="{{ asset('build/js/slider-scripts.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('build/plugins/slider/js/n2-j.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('build/plugins/slider/js/nextend-gsap.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('build/plugins/slider/js/nextend-frontend.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('build/plugins/slider/js/smartslider-frontend.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('build/plugins/slider/js/smartslider-simple-type-frontend.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('build/plugins/slider/js/nextend-webfontloader.min.js') }}"></script>
     <script type="text/javascript">
         N2R('documentReady', function ($) {
 
@@ -173,15 +179,19 @@
         </div>
     </div>
     <!-- PRELOADER END -->
+
     <!-- HEADER START -->
     {% include '_shared/header.html.twig' %}
     <!-- HEADER END -->
+
     <!-- SLIDER START -->
     {% include 'home_page/main_slider.html.twig' %}
     <!-- SLIDER END -->
+
     <!-- GAME SECTION START -->
     {% include 'home_page/game_section.html.twig' %}
     <!-- GAME SECTION END -->
+
     <!-- BLOG SECTION START -->
     <section class="blog-section ptb90">
         <div class="container">
@@ -999,4 +1009,8 @@
     <a href="#" id="toTop" class="color-white">
         <i class="fa fa-angle-up fsize-14" aria-hidden="true"></i>
     </a>
+
+    {% block javascript_body %}
+        {{ parent() }}
+    {% endblock %}
 {% endblock %}
