Updated login page register and forgot password links.

--- a/src/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/src/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -34,7 +34,7 @@
                         </div>
 
                         <div class="mt10 float-right">
-                            <a href="#" style="color: white;">
+                            <a href="/resetting/request" style="color: white;">
                                 Trouble signing in?
                             </a>
                         </div>
@@ -42,7 +42,7 @@
                         <input class="btn btn-block gradient mt30 color-white color-white plr50 ptb19" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
                     </form>
                     <div class="mt10">
-                        <a href="#" style="color: white;">
+                        <a href="/register" style="color: white;">
                             Don't have an account? Click here.
                         </a>
                     </div>
