Added user management.

--- a/templates/_shared/header.html.twig
+++ b/templates/_shared/header.html.twig
@@ -3,7 +3,7 @@
         <div class="table">
             <div class="table-row">
                 <div class="table-cell valign-middle text-left">
-                    <a href="index.html" class="logo">
+                    <a href="/" class="logo">
                         <h2>RESOLUT GAMING</h2>
                         {#<img src="{{ asset('build/images/logo.png') }}" alt="" class="img-responsive inline-block">#}
                     </a>
