--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,6 +18,8 @@
             <link rel="stylesheet" href="{{ asset('build/fonts/css/font-awesome.min.css') }}" />
             <!-- Bootstrap-->
             <link rel="stylesheet" href="{{ asset('build/css/bootstrap.min.css') }}" />
+
+            <link rel="stylesheet" href="{{ asset('build/css/bootstrap-social.css') }}" />
             <!-- Style -->
             <link rel="stylesheet" href="{{ asset('build/css/style.css') }}" />
             <!-- Responsive Style -->
